update scraping method
