# docs/swagger.json
@@ -473,6 +473,12 @@
                             "$ref": "#/definitions/handler.errorResponse"
                         }
                     },
+                    "406": {
+                        "description": "Avaliable for admin only",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
                     "422": {
                         "description": "Validation error",
                         "schema": {
