# internal/delivery/http/handler/scraper_handler.go
@@ -28,12 +28,24 @@ func NewScraperHandler(usecase usecase_rental_estate.IRentalEstateUsecase) *Scra
 // @Param request body triggerScraperRentalEstateRequest true "Target URL Payload"
 // @Success 202 {object} apiResponse "Scraper job started successfully"
 // @Failure 400 {object} errorResponse "Invalid request payload"
+// @Failure 406 {object} errorResponse "Avaliable for admin only"
 // @Failure 422 {object} errorResponse "Validation error"
 // @Failure 500 {object} errorResponse "Failed to start scraper job"
 // @Router /scraper/rental-estate [post]
 func (h *ScraperHandler) ScraperRentalEstate(c *gin.Context) {
+	role, exists := c.Get("role")
+	if !exists {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+	role, ok := role.(string)
+	if !ok || role != "admin" {
+		c.JSON(http.StatusNotAcceptable, gin.H{"error": "Avaliable for admin only"})
+		return
+	}
+
 	var req triggerScraperRentalEstateRequest
-	var validator = validator.New()
+	validator := validator.New()
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request payload"})
